--- a/root-config/src/microfrontend-layout.html
+++ b/root-config/src/microfrontend-layout.html
@@ -20,6 +20,9 @@
   <main>
     <route default>
       <application name="@single-spa/welcome"></application>
+      <application name="@Org79/navbar-app"></application>
+      <application name="@Org79/signup-app"></application>
+      <application name="@Org79/manageitem-app"></application>
     </route>
   </main>
 </single-spa-router>
