--- a/root-config/src/microfrontend-layout.html
+++ b/root-config/src/microfrontend-layout.html
@@ -18,11 +18,8 @@
   -->
 
   <main>
-    <route default>
-      <!-- <application name="@single-spa/welcome"></application> -->
+    <route default
       <application name="@Org79/navbar-app"></application>
-      <!-- <application name="@Org79/signup-app"></application>
-      <application name="@Org79/manageitem-app"></application> -->
     </route>
   </main>
 </single-spa-router>
